projet_gl/src/test/deca/lexer/invalid/incorrectMultiLineSting.deca
// Description:
//    test lexer invalid for multi-line string.
//
// Resultats:
//    line=10 token recognition error at: '"this is an \nincorrect\nmulti-line \\\\n'
//
// Historique:
//    cree le 10/01/2024

"this is an 
incorrect
multi-line \\\
string"